--- a/Reusability/src/styles.css
+++ b/Reusability/src/styles.css
@@ -1,1 +1,19 @@
 @import "tailwindcss";
+
+@layer component {
+  .button {
+    @apply font-bold border-2 border-black px-4 py-2 rounded flex items-center justify-center gap-2 text-lg;
+  }
+  .default {
+    @apply bg-blue-500 text-white font-bold;
+  }
+  .success {
+    @apply bg-green-500 text-white font-bold;
+  }
+  .warning {
+    @apply bg-yellow-500 text-white font-bold;
+  }
+  .danger {
+    @apply bg-red-500 text-white font-bold;
+  }
+}
