--- a/Reusability/src/styles.css
+++ b/Reusability/src/styles.css
@@ -1,5 +1,20 @@
 @import "tailwindcss";
 
+@theme {
+  --red: #e74c3c;
+  --blue: #3498db;
+  --navy: #2c3e50;
+}
+
+@layer base {
+  * {
+    @apply box-border m-0 p-0;
+  }
+  body {
+    @apply bg-gray-400;
+  }
+}
+
 @layer component {
   .button {
     @apply font-bold border-2 border-black px-4 py-2 rounded flex items-center justify-center gap-2 text-lg;
@@ -15,5 +30,39 @@
   }
   .danger {
     @apply bg-red-500 text-white font-bold;
+  }
+
+  .avatar {
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0.3rem solid white;
+  }
+  .avatar > img {
+    width: 100%;
+  }
+  .avatar-letters {
+    background-color: var(--red);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5rem;
+    font-family: "Karla", sans-serif;
+  }
+
+  .avatar-icon {
+    background-color: var(--navy);
+  }
+
+  .avatar > svg {
+    height: 100%;
+    width: 100%;
+    transform: translateY(20px);
+    color: whitesmoke;
   }
 }
